Cherry-pick 307066@main (13cab9300fd6). https://bugs.webkit.org/show_bug.cgi?id=302391

[GStreamer][WPE] WebAudio doesn't resume after window.alert()
    https://bugs.webkit.org/show_bug.cgi?id=302391

    Reviewed by Philippe Normand.

    window.alert() restarts the AudioContext pipeline which leads to reset
    the pipeline running time to 0 whereas the application keeps on
    timestamping the audio buffers monotonically. This creates a delay that
    the clocksync element is waiting before allowing the state change. This
    blocks the UI thread during the same delay as it is waiting
    synchronously for this state change to finish.

    This patch adjusts the appsrc pad offset after the pipeline is restarted
    to maintain the continuity of the application timestamping.

    * Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
    (webKitWebAudioSrcRenderAndPushFrames):
    (webKitWebAudioSrcChangeState):

    Canonical link: https://commits.webkit.org/307066@main

Canonical link: https://commits.webkit.org/298234.424@webkitglib/2.50